...
    <string name="text_option_non_compliant">NÃO CONFORME</string>
    <string name="text_title_question_obs">OBSERVAÇÃO</string>
    <string name="text_question_pos">QUESTÃO %1$s</string>
    <string name="text_question_desc">DESCR: %1$s</string>
    <string name="text_question_obs">OBS: %1$s</string>
    <string name="text_button_edit">EDITAR</string>
    <string name="text_button_close">FECHAR ITEN(S) APONTADO(S)</string>
    <string name="text_question_close_item">DESEJA REALMENTE FECHAR TODO(S) O(S) ITEM(S) APONTADO(S)?</string>
    <string name="text_item_os">OS %1$s</string>
    <string name="text_return_plant">DESEJA REALMENTE SAIR DA TELA DE PLANTA(S)? ISSO FECHARÁ TODOS OS APONTAMENTOS.</string>
    <string name="text_status_started">Aparelho sem configurações iniciais.</string>
    <string name="text_status_send">Existe dados para serem enviado</string>
    <string name="text_status_sending">Dados estão sendo enviados</string>
...
