package br.com.usinasantafe.pci.presenter.view.note.questionlist

import android.annotation.SuppressLint
import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.assertTextEquals
import androidx.compose.ui.test.junit4.createAndroidComposeRule
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import androidx.lifecycle.SavedStateHandle
import br.com.usinasantafe.pci.HiltTestActivity
import br.com.usinasantafe.pci.di.provider.BaseUrlModuleTest
import br.com.usinasantafe.pci.domain.usecases.flow.CheckItemNote
import br.com.usinasantafe.pci.domain.usecases.flow.CheckItemsOpen
import br.com.usinasantafe.pci.domain.usecases.flow.FinishItemsNote
import br.com.usinasantafe.pci.domain.usecases.flow.ListItemNote
import br.com.usinasantafe.pci.domain.usecases.update.UpdateTableComponent
import br.com.usinasantafe.pci.domain.usecases.update.UpdateTableService
import br.com.usinasantafe.pci.external.room.dao.stable.ComponentDao
import br.com.usinasantafe.pci.external.room.dao.stable.ItemDao
import br.com.usinasantafe.pci.external.room.dao.stable.ServiceDao
import br.com.usinasantafe.pci.external.room.dao.variable.HeaderDao
import br.com.usinasantafe.pci.external.room.dao.variable.RespDao
import br.com.usinasantafe.pci.external.sharedpreferences.datasource.IHeaderSharedPreferencesDatasource
import br.com.usinasantafe.pci.infra.datasource.sharedpreferences.ConfigSharedPreferencesDatasource
import br.com.usinasantafe.pci.infra.models.room.stable.ComponentRoomModel
import br.com.usinasantafe.pci.infra.models.room.stable.ItemRoomModel
import br.com.usinasantafe.pci.infra.models.room.stable.ServiceRoomModel
import br.com.usinasantafe.pci.infra.models.room.variable.HeaderRoomModel
import br.com.usinasantafe.pci.infra.models.room.variable.RespRoomModel
import br.com.usinasantafe.pci.infra.models.sharedpreferences.ConfigSharedPreferencesModel
import br.com.usinasantafe.pci.infra.models.sharedpreferences.HeaderSharedPreferencesModel
import br.com.usinasantafe.pci.presenter.Args.ID_PLANT_ARG
import br.com.usinasantafe.pci.presenter.theme.TAG_BUTTON_NO_ALERT_DIALOG_CHECK
import br.com.usinasantafe.pci.presenter.theme.TAG_BUTTON_YES_ALERT_DIALOG_CHECK
import br.com.usinasantafe.pci.utils.FlagUpdate
import br.com.usinasantafe.pci.utils.OptionResp
import br.com.usinasantafe.pci.utils.Status
import br.com.usinasantafe.pci.utils.WEB_ALL_COMPONENT
import br.com.usinasantafe.pci.utils.WEB_ALL_SERVICE
import br.com.usinasantafe.pci.utils.waitUntilTimeout
import dagger.hilt.android.testing.HiltAndroidRule
import dagger.hilt.android.testing.HiltAndroidTest
import kotlinx.coroutines.test.runTest
import okhttp3.mockwebserver.Dispatcher
import okhttp3.mockwebserver.MockResponse
import okhttp3.mockwebserver.MockWebServer
import okhttp3.mockwebserver.RecordedRequest
import org.junit.Assert.assertEquals
import org.junit.Rule
import org.junit.Test
import java.util.Date
import javax.inject.Inject
import kotlin.time.Duration.Companion.minutes

@HiltAndroidTest
class QuestionListNoteScreenTest {

    @get:Rule(order = 0)
    val hiltRule = HiltAndroidRule(this)

    @get:Rule(order = 1)
    val composeTestRule = createAndroidComposeRule<HiltTestActivity>()

    @Inject
    lateinit var checkItemNote: CheckItemNote

    @Inject
    lateinit var updateTableComponent: UpdateTableComponent

    @Inject
    lateinit var updateTableService: UpdateTableService

    @Inject
    lateinit var listItemNote: ListItemNote

    @Inject
    lateinit var finishItemsNote: FinishItemsNote

    @Inject
    lateinit var checkItemsOpen: CheckItemsOpen

    @Inject
    lateinit var itemDao: ItemDao

    @Inject
    lateinit var configSharedPreferencesDatasource: ConfigSharedPreferencesDatasource

    @Inject
    lateinit var componentDao: ComponentDao

    @Inject
    lateinit var serviceDao: ServiceDao

    @Inject
    lateinit var headerSharedPreferencesDatasource: IHeaderSharedPreferencesDatasource

    @Inject
    lateinit var respDao: RespDao

    @Inject
    lateinit var headerDao: HeaderDao

    private val resultComponentRetrofit = """
        [{"idComponent":1,"codComponent":"1","descComponent":"TESTE 1"}]
    """.trimIndent()

    private val resultComponentRetrofitFailure = """
        [
            {"idComponent":1,"codComponent":"1","descComponent":"TESTE 1"},
            {"idComponent":1,"codComponent":"1","descComponent":"TESTE 1"}
        ]
    """.trimIndent()

    private val resultServiceRetrofit = """
        [{"idService":1,"codService":1,"descService":"TESTE 1"}]
    """.trimIndent()

    private val resultServiceRetrofitFailure = """
        [
            {"idService":1,"codService":1,"descService":"TESTE 1"},
            {"idService":1,"codService":1,"descService":"TESTE 1"}
        ]
    """.trimIndent()

    private val dispatcherComponentFailure: Dispatcher = object : Dispatcher() {

        @Throws(InterruptedException::class)
        override fun dispatch(request: RecordedRequest): MockResponse {
            return when (request.path) {
                "/$WEB_ALL_COMPONENT" -> MockResponse().setBody("")
                "/$WEB_ALL_SERVICE" -> MockResponse().setBody("")
                else -> MockResponse().setResponseCode(404)
            }
        }
    }

    private val dispatcherComponentDuplicate: Dispatcher = object : Dispatcher() {

        @Throws(InterruptedException::class)
        override fun dispatch(request: RecordedRequest): MockResponse {
            return when (request.path) {
                "/$WEB_ALL_COMPONENT" -> MockResponse().setBody(resultComponentRetrofitFailure)
                "/$WEB_ALL_SERVICE" -> MockResponse().setBody("")
                else -> MockResponse().setResponseCode(404)
            }
        }
    }

    private val dispatcherServiceFailure: Dispatcher = object : Dispatcher() {

        @Throws(InterruptedException::class)
        override fun dispatch(request: RecordedRequest): MockResponse {
            return when (request.path) {
                "/$WEB_ALL_COMPONENT" -> MockResponse().setBody(resultComponentRetrofit)
                "/$WEB_ALL_SERVICE" -> MockResponse().setBody("")
                else -> MockResponse().setResponseCode(404)
            }
        }
    }

    private val dispatcherServiceDuplicate: Dispatcher = object : Dispatcher() {

        @Throws(InterruptedException::class)
        override fun dispatch(request: RecordedRequest): MockResponse {
            return when (request.path) {
                "/$WEB_ALL_COMPONENT" -> MockResponse().setBody(resultComponentRetrofit)
                "/$WEB_ALL_SERVICE" -> MockResponse().setBody(resultServiceRetrofitFailure)
                else -> MockResponse().setResponseCode(404)
            }
        }
    }

    private val dispatcherMissingDataTotal: Dispatcher = object : Dispatcher() {

        @Throws(InterruptedException::class)
        override fun dispatch(request: RecordedRequest): MockResponse {
            return when (request.path) {
                "/$WEB_ALL_COMPONENT" -> MockResponse().setBody(resultComponentRetrofit)
                "/$WEB_ALL_SERVICE" -> MockResponse().setBody(resultServiceRetrofit)
                else -> MockResponse().setResponseCode(404)
            }
        }
    }

    @Test
    fun check_open_screen_and_failure_if_not_have_data_config() =
        runTest(
            timeout = 10.minutes
        ) {

            hiltRule.inject()

            initialRegister(1)

            setContent()

            composeTestRule.waitUntilTimeout(3_000)

            composeTestRule.onNodeWithTag("text_alert_dialog_simple").assertIsDisplayed()
            composeTestRule.onNodeWithTag("text_alert_dialog_simple").assertTextEquals("FALHA DE ATUALIZAÇÃO DE DADOS! POR FAVOR ENTRE EM CONTATO COM TI. QuestionListNoteViewModel.updateComponentAndService -> IUpdateTableComponent -> IGetToken -> java.lang.NullPointerException")

            composeTestRule.waitUntilTimeout(3_000)

        }

    @Test
    fun check_open_screen_and_msg_if_web_service_not_returned() =
        runTest(
            timeout = 10.minutes
        ) {

            hiltRule.inject()

            initialRegister(2)

            setContent()

            composeTestRule.waitUntilTimeout(3_000)

            composeTestRule.onNodeWithTag("text_alert_dialog_simple").assertIsDisplayed()
            composeTestRule.onNodeWithTag("text_alert_dialog_simple").assertTextEquals("FALHA DE ATUALIZAÇÃO DE DADOS! POR FAVOR ENTRE EM CONTATO COM TI. QuestionListNoteViewModel.updateComponentAndService -> IUpdateTableComponent -> IComponentRepository.listAll -> IComponentRetrofitDatasource.listAll -> java.net.ConnectException: Failed to connect to localhost/127.0.0.1:8080")

            composeTestRule.waitUntilTimeout(3_000)

        }

    @Test
    fun check_open_screen_and_msg_if_web_service_return_not_return_data_component() =
        runTest(
            timeout = 1.minutes
        ) {

            val server = MockWebServer()
            server.dispatcher = dispatcherComponentFailure
            server.start()

            BaseUrlModuleTest.url = server.url("/").toString()

            hiltRule.inject()

            initialRegister(2)

            setContent()

            composeTestRule.waitUntilTimeout(3_000)

            composeTestRule.onNodeWithTag("text_alert_dialog_simple").assertIsDisplayed()
            composeTestRule.onNodeWithTag("text_alert_dialog_simple").assertTextEquals("FALHA DE ATUALIZAÇÃO DE DADOS! POR FAVOR ENTRE EM CONTATO COM TI. QuestionListNoteViewModel.updateComponentAndService -> IUpdateTableComponent -> IComponentRepository.listAll -> IComponentRetrofitDatasource.listAll -> java.io.EOFException: End of input at line 1 column 1 path \$")

            composeTestRule.waitUntilTimeout(3_000)

        }

    @Test
    fun check_open_screen_and_msg_if_web_service_return_token_correct_and_return_data_component_duplicate() =
        runTest(
            timeout = 1.minutes
        ) {

            val server = MockWebServer()
            server.dispatcher = dispatcherComponentDuplicate
            server.start()

            BaseUrlModuleTest.url = server.url("/").toString()

            hiltRule.inject()

            initialRegister(2)

            setContent()

            composeTestRule.waitUntilTimeout(3_000)

            composeTestRule.onNodeWithTag("text_alert_dialog_simple").assertIsDisplayed()
            composeTestRule.onNodeWithTag("text_alert_dialog_simple").assertTextEquals("FALHA DE ATUALIZAÇÃO DE DADOS! POR FAVOR ENTRE EM CONTATO COM TI. QuestionListNoteViewModel.updateComponentAndService -> IUpdateTableComponent -> IComponentRepository.addAll -> IComponentRoomDatasource.addAll -> android.database.sqlite.SQLiteConstraintException: UNIQUE constraint failed: tb_component.idComponent (code 1555 SQLITE_CONSTRAINT_PRIMARYKEY[1555])")

            composeTestRule.waitUntilTimeout(3_000)

        }

    @Test
    fun check_open_screen_and_msg_if_web_service_not_return_data_service() =
        runTest(
            timeout = 1.minutes
        ) {

            val server = MockWebServer()
            server.dispatcher = dispatcherServiceFailure
            server.start()

            BaseUrlModuleTest.url = server.url("/").toString()

            hiltRule.inject()

            initialRegister(2)

            setContent()

            composeTestRule.waitUntilTimeout(3_000)

            composeTestRule.onNodeWithTag("text_alert_dialog_simple").assertIsDisplayed()
            composeTestRule.onNodeWithTag("text_alert_dialog_simple").assertTextEquals("FALHA DE ATUALIZAÇÃO DE DADOS! POR FAVOR ENTRE EM CONTATO COM TI. QuestionListNoteViewModel.updateComponentAndService -> IUpdateTableService -> IServiceRepository.listAll -> IServiceRetrofitDatasource.listAll -> java.io.EOFException: End of input at line 1 column 1 path \$")

            composeTestRule.waitUntilTimeout(3_000)

            val componentList = componentDao.all()
            assertEquals(
                componentList.size,
                1
            )
            val entityComponent = componentList[0]
            assertEquals(
                entityComponent.idComponent,
                1
            )
            assertEquals(
                entityComponent.codComponent,
                "1"
            )
            assertEquals(
                entityComponent.descComponent,
                "TESTE 1"
            )

            composeTestRule.waitUntilTimeout(3_000)

        }

    @Test
    fun check_open_screen_and_msg_if_web_service_return_data_service_duplicate() =
        runTest(
            timeout = 1.minutes
        ) {

            val server = MockWebServer()
            server.dispatcher = dispatcherServiceDuplicate
            server.start()

            BaseUrlModuleTest.url = server.url("/").toString()

            hiltRule.inject()

            initialRegister(2)

            setContent()

            composeTestRule.waitUntilTimeout(3_000)

            composeTestRule.onNodeWithTag("text_alert_dialog_simple").assertIsDisplayed()
            composeTestRule.onNodeWithTag("text_alert_dialog_simple").assertTextEquals("FALHA DE ATUALIZAÇÃO DE DADOS! POR FAVOR ENTRE EM CONTATO COM TI. QuestionListNoteViewModel.updateComponentAndService -> IUpdateTableService -> IServiceRepository.addAll -> IServiceRoomDatasource.addAll -> android.database.sqlite.SQLiteConstraintException: UNIQUE constraint failed: tb_service.idService (code 1555 SQLITE_CONSTRAINT_PRIMARYKEY[1555])")

            composeTestRule.waitUntilTimeout(3_000)

            val componentList = componentDao.all()
            assertEquals(
                componentList.size,
                1
            )
            val entityComponent = componentList[0]
            assertEquals(
                entityComponent.idComponent,
                1
            )
            assertEquals(
                entityComponent.codComponent,
                "1"
            )
            assertEquals(
                entityComponent.descComponent,
                "TESTE 1"
            )

            composeTestRule.waitUntilTimeout(3_000)

        }

    @Test
    fun check_open_screen_and_msg_if_not_have_data_in_header_table() =
        runTest(
            timeout = 1.minutes
        ) {

            val server = MockWebServer()
            server.dispatcher = dispatcherMissingDataTotal
            server.start()

            BaseUrlModuleTest.url = server.url("/").toString()

            hiltRule.inject()

            initialRegister(2)

            setContent()

            composeTestRule.waitUntilTimeout(3_000)

            composeTestRule.onNodeWithTag("text_alert_dialog_simple").assertIsDisplayed()
            composeTestRule.onNodeWithTag("text_alert_dialog_simple").assertTextEquals("FALHA INESPERADA NO APLICATIVO! POR FAVOR ENTRE EM CONTATO COM TI. QuestionListNoteViewModel.recoverList -> IListItemNote -> ICheckListRepository.getIdOSHeaderOpen -> IHeaderSharedPreferencesDatasource.getIdOS -> java.lang.NullPointerException")

            composeTestRule.waitUntilTimeout(3_000)

            val componentList = componentDao.all()
            assertEquals(
                componentList.size,
                1
            )
            val entityComponent = componentList[0]
            assertEquals(
                entityComponent.idComponent,
                1
            )
            assertEquals(
                entityComponent.codComponent,
                "1"
            )
            assertEquals(
                entityComponent.descComponent,
                "TESTE 1"
            )

            val serviceList = serviceDao.all()
            assertEquals(
                serviceList.size,
                1
            )
            val entityService = serviceList[0]
            assertEquals(
                entityService.idService,
                1
            )
            assertEquals(
                entityService.codService,
                1
            )
            assertEquals(
                entityService.descService,
                "TESTE 1"
            )

            composeTestRule.waitUntilTimeout(3_000)

        }

    @Test
    fun check_open_screen_and_qtd_data_incorrect_data_service_and_component() =
        runTest(
            timeout = 1.minutes
        ) {

            val server = MockWebServer()
            server.dispatcher = dispatcherMissingDataTotal
            server.start()

            BaseUrlModuleTest.url = server.url("/").toString()

            hiltRule.inject()

            initialRegister(3)

            setContent()

            composeTestRule.waitUntilTimeout(3_000)

            composeTestRule.onNodeWithTag("text_alert_dialog_simple").assertIsDisplayed()
            composeTestRule.onNodeWithTag("text_alert_dialog_simple").assertTextEquals("FALHA INESPERADA NO APLICATIVO! POR FAVOR ENTRE EM CONTATO COM TI. QuestionListNoteViewModel.recoverList -> IListItemNote -> java.util.NoSuchElementException: Collection contains no element matching the predicate.")

            composeTestRule.waitUntilTimeout(3_000)

        }

    @Test
    fun check_open_screen_and_return_list_correct_with_update() =
        runTest(
            timeout = 1.minutes
        ) {

            hiltRule.inject()

            initialRegister(4)

            setContent()

            composeTestRule.waitUntilTimeout(10_000)

        }

    @Test
    fun check_open_screen_with_item_noted() =
        runTest(
            timeout = 1.minutes
        ) {

            hiltRule.inject()

            initialRegister(5)

            setContent()

            composeTestRule.waitUntilTimeout(10_000)

        }

    @Test
    fun check_open_screen_and_view_msg_if_not_have_header_room() =
        runTest(
            timeout = 1.minutes
        ) {

            hiltRule.inject()

            initialRegister(5)

            setContent()

            composeTestRule.waitUntilTimeout(3_000)

            composeTestRule.onNodeWithText("FECHAR ITEN(S) APONTADO(S)")
                .performClick()

            composeTestRule.waitUntilTimeout(3_000)

            composeTestRule.onNodeWithTag(TAG_BUTTON_NO_ALERT_DIALOG_CHECK)
                .performClick()

            composeTestRule.waitUntilTimeout(3_000)

            composeTestRule.onNodeWithText("FECHAR ITEN(S) APONTADO(S)")
                .performClick()

            composeTestRule.waitUntilTimeout(3_000)

            composeTestRule.onNodeWithTag(TAG_BUTTON_YES_ALERT_DIALOG_CHECK)
                .performClick()

            composeTestRule.waitUntilTimeout(3_000)

            composeTestRule.onNodeWithTag("text_alert_dialog_simple").assertIsDisplayed()
            composeTestRule.onNodeWithTag("text_alert_dialog_simple").assertTextEquals("FALHA INESPERADA NO APLICATIVO! POR FAVOR ENTRE EM CONTATO COM TI. QuestionListNoteViewModel.closeItem -> ICloseItemsNote -> ICheckListRepository.closeItems -> java.lang.NullPointerException")

            composeTestRule.waitUntilTimeout(3_000)

        }

    @Test
    fun check_open_screen_and_close_item_noted() =
        runTest(
            timeout = 1.minutes
        ) {

            hiltRule.inject()

            initialRegister(6)

            setContent()

            composeTestRule.waitUntilTimeout(3_000)

            composeTestRule.onNodeWithText("FECHAR ITEN(S) APONTADO(S)")
                .performClick()

            composeTestRule.waitUntilTimeout(3_000)

            composeTestRule.onNodeWithTag(TAG_BUTTON_NO_ALERT_DIALOG_CHECK)
                .performClick()

            composeTestRule.waitUntilTimeout(3_000)

            composeTestRule.onNodeWithText("FECHAR ITEN(S) APONTADO(S)")
                .performClick()

            composeTestRule.waitUntilTimeout(3_000)

            composeTestRule.onNodeWithTag(TAG_BUTTON_YES_ALERT_DIALOG_CHECK)
                .performClick()

            composeTestRule.waitUntilTimeout(3_000)

            val list = respDao.all()
            assertEquals(
                list.size,
                1
            )
            val entity = list[0]
            assertEquals(
                entity.id,
                1
            )
            assertEquals(
                entity.idItem,
                1
            )
            assertEquals(
                entity.idPlant,
                1
            )
            assertEquals(
                entity.option,
                OptionResp.ACCORDING
            )
            assertEquals(
                entity.status,
                Status.FINISH
            )

            composeTestRule.waitUntilTimeout(3_000)

        }

    @SuppressLint("ViewModelConstructorInComposable")
    private fun setContent() {
        composeTestRule.setContent {
            QuestionListNoteScreen(
                viewModel = QuestionListNoteViewModel(
                    saveStateHandle = SavedStateHandle(
                        mapOf(
                            ID_PLANT_ARG to 1
                        )
                    ),
                    checkItemNote = checkItemNote,
                    updateTableComponent = updateTableComponent,
                    updateTableService = updateTableService,
                    listItemNote = listItemNote,
                    finishItemsNote = finishItemsNote,
                    checkItemsOpen = checkItemsOpen
                ),
                onNavPlantList = {},
                onNavQuestionResp = {},
                onNavQuestionDesc = {},
                onNavSplash = {}
            )
        }
    }

    private suspend fun initialRegister(level: Int) {

        itemDao.insertAll(
            listOf(
                ItemRoomModel(
                    idItem = 1,
                    seqItem = 1,
                    idOSItem = 1,
                    idPlantItem = 1,
                    idComponentItem = 0,
                    idServiceItem = 1
                ),
                ItemRoomModel(
                    idItem = 2,
                    seqItem = 2,
                    idOSItem = 1,
                    idPlantItem = 1,
                    idComponentItem = 1,
                    idServiceItem = 1
                ),
                ItemRoomModel(
                    idItem = 4,
                    seqItem = 4,
                    idOSItem = 1,
                    idPlantItem = 1,
                    idComponentItem = 2,
                    idServiceItem = 2
                ),
                ItemRoomModel(
                    idItem = 5,
                    seqItem = 5,
                    idOSItem = 1,
                    idPlantItem = 1,
                    idComponentItem = 3,
                    idServiceItem = 2
                ),
                ItemRoomModel(
                    idItem = 6,
                    seqItem = 6,
                    idOSItem = 1,
                    idPlantItem = 2,
                    idComponentItem = 4,
                    idServiceItem = 3
                ),
                ItemRoomModel(
                    idItem = 7,
                    seqItem = 7,
                    idOSItem = 1,
                    idPlantItem = 2,
                    idComponentItem = 5,
                    idServiceItem = 4
                ),
                ItemRoomModel(
                    idItem = 8,
                    seqItem = 8,
                    idOSItem = 1,
                    idPlantItem = 2,
                    idComponentItem = 5,
                    idServiceItem = 5
                ),
                ItemRoomModel(
                    idItem = 9,
                    seqItem = 9,
                    idOSItem = 1,
                    idPlantItem = 2,
                    idComponentItem = 6,
                    idServiceItem = 5
                ),
                ItemRoomModel(
                    idItem = 10,
                    seqItem = 10,
